--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Dr. Lecheng Ruan"
+  name             : "Lecheng Ruan, Ph.D."
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Beijing, P.R.China | Los Angeles, CA, U.S.A."
+  bio              : "Teacher|Engineer|Researcher|Investor|Student"
+  location         : "Beijing, China | Los Angeles, USA"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=qKSH6AIAAAAJ&hl=en&oi=ao"
