--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Lecheng Ruan, Ph.D."
   avatar           : "profile.png"
-  bio              : "Teacher|Engineer|Researcher|Investor|Student"
+  bio              : "Teacher|Engineer|Researcher  Investor|Student"
   location         : "Beijing, China | Los Angeles, USA"
   employer         :
   pubmed           : 
