--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Lecheng Ruan, Ph.D."
-  avatar           : "profile.png"
+  avatar           : "Myphoto.jpg"
   bio              : "Teacher|Engineer|Researcher|  Investor|Student"
   location         : "Beijing, China | Los Angeles, USA"
   employer         :
