--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,5 @@ main:
 #  - title: "Guide"
 #    url: /markdown/
 
-  - title: "Research"
-    url: /publications/
+#  - title: "Research"
+#    url: /publications/
